--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -877,13 +877,16 @@ footer {
         }
 
         .imagem_inicio {
-            max-width: 300px; 
-            width: 100%;
+            max-width: 350px; 
+            width: 350px;
             margin-top: 30px;
-
+            img{
+                width: 100%;
+            }
             .saudacao {
                 font-size: 20px;
                 padding: 4px;
+                right: 20px;
             }
         }
     }
