--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -753,7 +753,8 @@ footer .letra {
     height: clamp(40px, 10vw, 45px);
   }
   .container_inicio .imagem_inicio {
-    width: 350px;
+    width: 400px;
+    max-width: none;
     margin-top: 30px;
   }
   .container_inicio .imagem_inicio img {
@@ -762,7 +763,8 @@ footer .letra {
   .container_inicio .imagem_inicio .saudacao {
     font-size: 18px;
     padding: 4px;
-    right: 30px;
+    right: 40px;
+    bottom: 0;
   }
   .sobre_mim {
     margin-top: 60px;
