--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -30,7 +30,7 @@ body {
     height: 100%;
     pointer-events: none;
     animation: surgir 3s ease-in 1;
-    z-index: 0; // Ensure stars stay in background
+    z-index: 0;
 }
 
 .inicio {
@@ -245,10 +245,10 @@ main {
                 position: absolute;
                 width: fit-content;
                 height: fit-content;
-                font-size: 30px;
+                font-size: 20px;
                 padding: 6px;
                 bottom: 0px;
-                right: 10px;
+                right: 60px;
                 display: block;
                 z-index: 21;
 
@@ -495,7 +495,10 @@ main {
                 align-items: center;
                 gap: 1em;
                 width: 100%; 
-                min-width: unset; 
+                min-width: unset;
+                background-color: $pretoClaro;
+                border-radius: 20px;
+                padding: 1em;
 
                 img {
                     width: 100%;
@@ -520,7 +523,6 @@ main {
                 p {
                     font-size: 16px;
                     text-align: justify;
-                    background-color: $pretoClaro;
                     color: $branco;
                     padding: 10px;
                     border-radius: 5px;
@@ -535,10 +537,10 @@ main {
 
                     .botao_projeto {
                         text-decoration: none;
-                        background-color: $pretoClaro;
+                        background-color: $rgbaClaro;
                         padding: 10px 15px;
                         font-weight: 700;
-                        color: $branco;
+                        color: $preto;
                         border-radius: 5px;
                         font-size: 16px;
                         transition: background-color 0.3s, color 0.3s;
@@ -877,17 +879,13 @@ footer {
         }
 
         .imagem_inicio { 
-            width: 400px;
+            width: 100%;
             max-width: none;
             margin-top: 30px;
+
             img{
                 width: 100%;
-            }
-            .saudacao {
-                font-size: 18px;
-                padding: 4px;
-                right: 40px;
-                bottom: 0;
+                max-width: none;
             }
         }
     }
@@ -999,10 +997,6 @@ footer {
             gap: 1.5em;
             overflow-y: hidden;
 
-            .game{
-                width: 70%;
-            }
-
             ._projeto {
                 min-width: unset;
                 width: 100%;
@@ -1011,13 +1005,6 @@ footer {
                 img {
                     max-width: clamp(120px, 90vw, 140px);
                     padding: 8px;
-                }
-
-                
-                img.games {
-                    max-width: clamp(120px, 90vw, 140px);
-                    padding: 8px;
-                    margin-top: 0;
                 }
 
                 small {
